2009-04-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: clean up cmd global var used [Bug 2441583]

	* tkcon.tcl (::tkcon::Retrieve): support http code redirect for
	downloading latest version. [Bug 1755500]

	* README.txt, docs/limits.html, docs/nontcl.html: bump to 2.6
	* pkgIndex.tcl, tkcon.tcl: Use Tcl 8.4 code style.

2009-02-26  Jeff Hobbs  <jeffh@ActiveState.com>

	**** TKCON 2.5 TAGGED FOR RELEASE ****

	* index.html, docs/*.html: update links and references

2009-02-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/tkcon.html, docs/tkcon.n.man: add tkcon resultfilter docs.

2008-02-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::Bindings): prevent Expand virtual events
	from triggering follow-on events (most important for <Tab>).
	(::tkcon::Retrieve): remove extraneous http::geturl call.
	
2007-06-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (::tkcon::EvalCmd): add OPT(resultfilter) and 'tkcon
	resultfilter ?cmd?' to allow optional result filter command.
	Command will be passed result code and data and must return what
	tkcon will return to the user.  Command is run in attached slave.
	Ensure that initial files are sources at level #0.
	Convert args after (--|-argv|-args) into slave arguments and set
	them as the main $::argv/$::argc for propagation.

2007-06-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/tkcon.1.man, docs/tkcon.n.man, docs/tkconrc.5.man (new): 
	* docs/dump.n.man, docs/observe.n.man, docs/idebug.n.man (new): 
	* index.html, docs/demopic.gif (removed), docs/demopic.png (new):
	* docs/plugin.html, docs/start.html, docs/tkcon.html:
	Updated docs and added doctools equivalents courtesy Sergei Golovan
	* docs/style.css: updated stylesheet
	
2007-04-04  Jeff Hobbs  <jeffh@ActiveState.com>

	*** BUMPED TO VERSION 2.5 ***

	* tkcon.tcl: ensure option overrides only effect tkcon and
	subwidgets.
	(edit): Add -wrap option to 'edit' command.
	(::tkcon::AtSource): adjust argv0 existence check
