@@ -1,5 +1,7 @@
 2009-04-24  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* tkcon.tcl: update pre-8.4 private text binding refs
+
 	* tkcon.tcl: clean up cmd global var used [Bug 2441583]
 
 	* tkcon.tcl (::tkcon::Retrieve): support http code redirect for
